tests/errors/func_02.py
from lpython import i32, In

def f(n: In[i32]):
    n = 5
    print(n)
